syntax = "proto3";

package connect;
option go_package = ".;connect";

service ConnectApi {
  rpc Connect(ConnectRequest) returns (ConnectResponse);
}

message ConnectRequest {}

message ConnectResponse {}
